Glider stats - add year param

--- a/template.env
+++ b/template.env
@@ -5,5 +5,8 @@ START_DRIVER = True
 # To reset pilots
 #ALLOW_DELETE = True
 
+# Default (current) year
+YEAR = 2025
+
 # Load pilots up to a maximum rank of 50*XCONTEST_MAX_PAGE_NUM
 XCONTEST_MAX_PAGE_NUM = 10
